--- a/index.html
+++ b/index.html
@@ -8,24 +8,34 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css?v=1771878775827">
-    <link rel="stylesheet" href="compact-popup-style.css?v=1771878775827">
+    <link rel="stylesheet" href="styles.css?v=1771882301250">
+    <link rel="stylesheet" href="compact-popup-style.css?v=1771882301250">
+
+    <!-- PWA / Mode Installation Web App -->
+    <link rel="manifest" href="manifest.json">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Pokétime">
+    <link rel="apple-touch-icon"
+        href="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/items/poke-ball.png">
+
     <!-- Scripts JavaScript du jeu -->
-    <script src="constants.js?v=1771878775827" defer></script>
-    <script src="formatters.js?v=1771878775827" defer></script>
-    <script src="pokemonStats.js?v=1771878775827" defer></script>
-    <script src="Creature.js?v=1771878775827" defer></script>
-    <script src="gameManager.js?v=1771878775827" defer></script>
-    <script src="narrativeData.js?v=1771878775827" defer></script>
-    <script src="narrativeManager.js?v=1771878775827" defer></script>
-    <script src="uiManager.js?v=1771878775827" defer></script>
-    <script src="shopSystem.js?v=1771878775827" defer></script>
-    <script src="combatSystem.js?v=1771878775827" defer></script>
-    <script src="questSystem.js?v=1771878775827" defer></script>
-    <script src="saveSystem.js?v=1771878775827" defer></script>
-    <script src="expeditionSystem.js?v=1771878775827" defer></script>
-    <script src="towerSystem.js?v=1771878775827" defer></script>
-    <script src="zoneSystem.js?v=1771878775827" defer></script>
+    <script src="constants.js?v=1771882301250" defer></script>
+    <script src="formatters.js?v=1771882301250" defer></script>
+    <script src="pokemonStats.js?v=1771882301250" defer></script>
+    <script src="Creature.js?v=1771882301250" defer></script>
+    <script src="gameManager.js?v=1771882301250" defer></script>
+    <script src="narrativeData.js?v=1771882301250" defer></script>
+    <script src="narrativeManager.js?v=1771882301250" defer></script>
+    <script src="uiManager.js?v=1771882301250" defer></script>
+    <script src="shopSystem.js?v=1771882301250" defer></script>
+    <script src="combatSystem.js?v=1771882301250" defer></script>
+    <script src="questSystem.js?v=1771882301250" defer></script>
+    <script src="saveSystem.js?v=1771882301250" defer></script>
+    <script src="expeditionSystem.js?v=1771882301250" defer></script>
+    <script src="towerSystem.js?v=1771882301250" defer></script>
+    <script src="zoneSystem.js?v=1771882301250" defer></script>
 
 </head>
 
@@ -1058,8 +1068,8 @@
             </div>
         </div>
     </div>
-    <script src="toastManager.js?v=1771878775827" defer></script>
-    <script src="game.js?v=1771878775827" defer></script>
+    <script src="toastManager.js?v=1771882301250" defer></script>
+    <script src="game.js?v=1771882301250" defer></script>
     <script>
         function saveGame() {
             if (window.game) return game.saveGame();
@@ -1086,6 +1096,20 @@
         });
     </script>
 
+    <!-- Register Service Worker for PWA -->
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then(registration => {
+                        console.log('SW registered: ', registration);
+                    })
+                    .catch(registrationError => {
+                        console.log('SW registration failed: ', registrationError);
+                    });
+            });
+        }
+    </script>
 </body>
 
 </html>
